--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ padding: 30px;
 }
 .heading{
     margin: 0px;
-    text-align: end;
-    padding-right: 30px;
+   
+    padding-left: 20px;
     font-style: italic;
     font-weight: bold;
     color: rgb(67, 70, 61);
